--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
       const errorElement = document.getElementById('loginError');
       
       // Root password is "null" (case insensitive)
-      if (passwordInput.toLowerCase() === 'Horizon') {
+      if (passwordInput.toLowerCase() === 'null') {
         // Successful login
         document.getElementById('loginContainer').classList.add('hidden');
         document.getElementById('mainMenu').classList.remove('hidden');
