--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     .login-input {
       padding: 14px 16px;
       border: 2px solid var(--light-gray);
-      border-radius: 10px;
+      bridius: 10px;
       font-size: 16px;
       width: 100%;
       box-sizing: border-box;
@@ -585,7 +585,7 @@
     .dialog-btn {
       padding: 12px 24px;
       border-radius: 8px;
-      font-weight: 500;
+      font-weight: 50%;
       cursor: pointer;
       transition: var(--transition);
       border: none;
@@ -698,7 +698,7 @@
     .position-list {
       margin-top: 15px;
       border: 1px solid var(--light-gray);
-      bridius: 10px;
+      border-radius: 10px;
       overflow: hidden;
       max-height: 200px;
       overflow-y: auto;
