--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
       <div class="position-input-container">
         <input type="text" class="position-input" id="positionNameInput" placeholder="Enter new position name">
         <button class="add-position-btn" onclick="addPosition()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 5px;">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="only for field section" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 5px;">
             <line x1="12" y1="5" x2="12" y2="19"></line>
             <line x1="5" y1="12" x2="19" y2="12"></line>
           </svg>
@@ -992,7 +992,7 @@
         positionList.innerHTML = ELECTION_POSITIONS.map(position => `
           <div class="position-item" data-position="${position}">
             <span>${position}</span>
-            <button class="remove-position-btn" onclick="removePosition('${position.replace(/'/g, "\\'")}')" ${currentLoginType === 'field' ? 'disabled' : ''}>
+            <button class="remove-position-btn" onclick="removePosition('${position.replace(/'/g, "\\'")}')" ${currentLoginType !== 'field' ? 'disabled' : ''}>
               <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="18" y1="6" x2="6" y2="18"></line>
                 <line x1="6" y1="6" x2="18" y2="18"></line>
@@ -1032,8 +1032,8 @@
     }
 
     async function addPosition() {
-      if (currentLoginType === 'field') {
-        showToast('Cannot add positions in field mode', 'error');
+      if (currentLoginType !== 'field') {
+        showToast('Only available in field mode', 'error');
         return;
       }
       
@@ -1063,8 +1063,8 @@
     }
 
     async function removePosition(positionName) {
-      if (currentLoginType === 'field') {
-        showToast('Cannot remove positions in field mode', 'error');
+      if (currentLoginType !== 'field') {
+        showToast('Only available in field mode', 'error');
         return;
       }
       
@@ -1136,12 +1136,10 @@
         loadCandidateData().then(() => {
           document.getElementById('candidateManagement').classList.remove('hidden');
           document.getElementById('positionManagementSection').style.display = 'block';
-          document.getElementById('candidateNameInput').disabled = true;
-          document.getElementById('addCandidateBtn').disabled = true;
           document.getElementById('candidateInputContainer').style.display = 'none';
-          document.getElementById('candidateList').style.display = 'block';
+          document.getElementById('candidateList').style.display = 'none';
           document.querySelector('.save-btn').style.display = 'none';
-          updateCandidateList();
+          updatePositionList();
         }).catch(error => {
           console.error("Error loading candidate data:", error);
           errorElement.textContent = 'Failed to load candidate data. Please try again.';
@@ -1478,7 +1476,7 @@
         </div>
         <button class="btn" id="restartBtn" disabled>
           Start New Voting Session
-        </button>
+          </button>
         <button class="invisible-timer-btn" onclick="showTimeLeft()"></button>
         <div class="creator-credit">Created By Bhavesh Pawar From Grade 9</div>
       `;
@@ -1757,18 +1755,19 @@
     }
 
     function goTo(from, to) {
-      if (timerInterval) {
-        clearInterval(timerInterval);
-        timerInterval = null;
-      }
-      document.getElementById(from).classList.add("hidden");
-      document.getElementById(to).classList.remove("hidden");
-      if (to === 'mainMenu') {
-        current = 0;
-        selectedCandidate = null;
-        isSkipSelected = false;
-        timeLeft = 300;
-      }
+  if (timerInterval) {
+    clearInterval(timerInterval);
+    timerInterval = null;
+  }
+  document.getElementById(from).classList.add("hidden");
+  document.getElementById(to).classList.remove("hidden");
+  if (to === 'mainMenu') {
+    current = 0;
+    selectedCandidate = null;
+    isSkipSelected = false;
+    timeLeft = 300;
+  }
+}
     }
   </script>
 </body>
