--- a/index.html
+++ b/index.html
@@ -770,12 +770,39 @@
         padding: 12px 14px;
       }
     }
+    .loading-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(255, 255, 255, 0.7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+      opacity: 0;
+      visibility: hidden;
+      transition: var(--transition);
+    }
+    .loading-overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+    .loading-spinner {
+      width: 50px;
+      height: 50px;
+      border: 5px solid rgba(67, 97, 238, 0.3);
+      border-radius: 50%;
+      border-top-color: var(--primary);
+      animation: spin 1s ease-in-out infinite;
+    }
   </style>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
 </head>
 <body>
+  <div class="loading-overlay" id="loadingOverlay">
+    <div class="loading-spinner"></div>
+  </div>
   <div class="confirmation-dialog" id="confirmationDialog">
     <div class="dialog-content">
       <div class="dialog-title" id="dialogTitle">Confirm Action</div>
@@ -830,7 +857,7 @@
       <div class="position-input-container">
         <input type="text" class="position-input" id="positionNameInput" placeholder="Enter new position name">
         <button class="add-position-btn" onclick="addPosition()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="only for field section" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 5px;">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 5px;">
             <line x1="12" y1="5" x2="12" y2="19"></line>
             <line x1="5" y1="12" x2="19" y2="12"></line>
           </svg>
@@ -875,6 +902,8 @@
     </div>
   </div>
   <div class="container hidden" id="thankYouMenu"></div>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
   <script>
     const { jsPDF } = window.jspdf;
     const firebaseConfig = {
@@ -896,6 +925,14 @@
     let timeLeft = 300;
     let currentLoginType = '';
     let positionSortable, candidateSortable;
+
+    function showLoading() {
+      document.getElementById('loadingOverlay').classList.add('active');
+    }
+
+    function hideLoading() {
+      document.getElementById('loadingOverlay').classList.remove('active');
+    }
 
     function showToast(message, type = 'info', duration = 3000) {
       const toast = document.getElementById('toastNotification');
@@ -942,6 +979,7 @@
 
     async function loadPositions() {
       try {
+        showLoading();
         const docRef = db.collection("voteCounts").doc("positions");
         const doc = await docRef.get();
         if (doc.exists) {
@@ -971,6 +1009,8 @@
       } catch (error) {
         console.error("Error loading positions:", error);
         showToast('Failed to load positions', 'error');
+      } finally {
+        hideLoading();
       }
     }
 
@@ -1010,6 +1050,9 @@
     }
 
     function initPositionSortable() {
+      if (positionSortable) {
+        positionSortable.destroy();
+      }
       const positionList = document.getElementById('positionList');
       positionSortable = Sortable.create(positionList, {
         animation: 150,
@@ -1036,7 +1079,7 @@
         showToast('Only available in field mode', 'error');
         return;
       }
-      
+
       const positionName = document.getElementById('positionNameInput').value.trim();
       if (!positionName) {
         showToast('Please enter a position name', 'error');
@@ -1046,6 +1089,11 @@
         showToast('This position already exists', 'error');
         return;
       }
+      if (!/^[a-zA-Z0-9\s\-()]+$/.test(positionName)) {
+        showToast('Position name contains invalid characters', 'error');
+        return;
+      }
+
       ELECTION_POSITIONS.push(positionName);
       document.getElementById('positionNameInput').value = '';
       updatePositionSelector();
@@ -1067,7 +1115,7 @@
         showToast('Only available in field mode', 'error');
         return;
       }
-      
+
       showConfirmationDialog(
         'Remove Position',
         `Are you sure you want to remove the "${positionName}" position? This will also remove all candidates and votes for this position.`,
@@ -1152,6 +1200,7 @@
 
     async function loadCandidateData() {
       try {
+        showLoading();
         showToast('Loading candidate data...', 'info');
         const docRef = db.collection("voteCounts").doc("candidates");
         const doc = await docRef.get();
@@ -1169,6 +1218,8 @@
         console.error("Error loading candidate data:", error);
         showToast('Failed to load candidate data', 'error');
         throw error;
+      } finally {
+        hideLoading();
       }
     }
 
@@ -1219,6 +1270,7 @@
         showToast('Cannot add candidates in field mode', 'error');
         return;
       }
+
       const position = document.getElementById('positionSelector').value;
       const candidateName = document.getElementById('candidateNameInput').value.trim();
       if (!candidateName) {
@@ -1232,6 +1284,11 @@
         showToast('This candidate already exists for this position', 'error');
         return;
       }
+      if (!/^[a-zA-Z0-9\s\-()]+$/.test(candidateName)) {
+        showToast('Candidate name contains invalid characters', 'error');
+        return;
+      }
+
       candidatesData[position].push(candidateName);
       document.getElementById('candidateNameInput').value = '';
       updateCandidateList();
@@ -1243,6 +1300,7 @@
         showToast('Cannot remove candidates in field mode', 'error');
         return;
       }
+
       showConfirmationDialog(
         'Remove Candidate',
         `Are you sure you want to remove ${candidateName} from ${position}? This will also remove all their votes.`,
@@ -1272,6 +1330,7 @@
 
     async function saveCandidates() {
       try {
+        showLoading();
         showToast('Saving candidate data...', 'info');
         await db.collection("voteCounts").doc("candidates").set({
           positions: candidatesData,
@@ -1282,6 +1341,8 @@
       } catch (error) {
         console.error("Error saving candidates:", error);
         showToast('Failed to save candidates', 'error');
+      } finally {
+        hideLoading();
       }
     }
 
@@ -1405,14 +1466,22 @@
       if (isSkipSelected) {
         skipPosition(title);
       } else if (selectedCandidate && selectedCandidate.title === title) {
-        await vote(title, selectedCandidate.candidateIndex);
-        selectedCandidate = null;
-        isSkipSelected = false;
-        current++;
-        if (current < ELECTION_POSITIONS.length) {
-          showVotingFrame(ELECTION_POSITIONS[current]);
-        } else {
-          showThankYouMenu();
+        try {
+          showLoading();
+          await vote(title, selectedCandidate.candidateIndex);
+          selectedCandidate = null;
+          isSkipSelected = false;
+          current++;
+          if (current < ELECTION_POSITIONS.length) {
+            showVotingFrame(ELECTION_POSITIONS[current]);
+          } else {
+            showThankYouMenu();
+          }
+        } catch (error) {
+          console.error("Error proceeding to next:", error);
+          showToast("Failed to proceed. Please try again.", "error");
+        } finally {
+          hideLoading();
         }
       }
     }
@@ -1429,8 +1498,11 @@
     }
 
     async function vote(title, candidateIndex) {
-      const candidateName = candidatesData[title][candidateIndex];
       try {
+        if (!candidatesData[title] || !candidatesData[title][candidateIndex]) {
+          throw new Error("Invalid candidate selection");
+        }
+        const candidateName = candidatesData[title][candidateIndex];
         const voteCountRef = db.collection("voteCounts").doc(title);
         await db.runTransaction(async (transaction) => {
           const doc = await transaction.get(voteCountRef);
@@ -1556,25 +1628,34 @@
     }
 
     async function showVotes() {
-      const voteButtons = document.getElementById("voteButtons");
-      voteButtons.innerHTML = '';
-      for (const pos of ELECTION_POSITIONS) {
-        const btn = document.createElement("button");
-        btn.className = "category-btn";
-        btn.textContent = pos;
-        btn.onclick = () => showCategoryVotes(pos);
-        voteButtons.appendChild(btn);
+      try {
+        showLoading();
+        const voteButtons = document.getElementById("voteButtons");
+        voteButtons.innerHTML = '';
+        for (const pos of ELECTION_POSITIONS) {
+          const btn = document.createElement("button");
+          btn.className = "category-btn";
+          btn.textContent = pos;
+          btn.onclick = () => showCategoryVotes(pos);
+          voteButtons.appendChild(btn);
+        }
+        document.getElementById("mainMenu").classList.add("hidden");
+        document.getElementById("voteSummary").classList.remove("hidden");
+      } catch (error) {
+        console.error("Error showing votes:", error);
+        showToast("Failed to load votes", "error");
+      } finally {
+        hideLoading();
       }
-      document.getElementById("mainMenu").classList.add("hidden");
-      document.getElementById("voteSummary").classList.remove("hidden");
     }
 
     async function showCategoryVotes(title) {
-      document.getElementById("voteSummary").classList.add("hidden");
-      document.getElementById("categoryVotes").classList.remove("hidden");
-      const display = document.getElementById("voteDisplay");
-      const titleElement = document.getElementById("categoryTitle");
       try {
+        showLoading();
+        document.getElementById("voteSummary").classList.add("hidden");
+        document.getElementById("categoryVotes").classList.remove("hidden");
+        const display = document.getElementById("voteDisplay");
+        const titleElement = document.getElementById("categoryTitle");
         showToast('Loading vote data...', 'info');
         const docRef = db.collection("voteCounts").doc(title);
         const docSnap = await docRef.get();
@@ -1621,6 +1702,8 @@
       } catch (error) {
         console.error("Error showing category votes:", error);
         showToast("Failed to load vote data", "error");
+      } finally {
+        hideLoading();
       }
     }
 
@@ -1632,6 +1715,7 @@
           "Are you sure you want to delete ALL votes? This action cannot be undone and will reset all vote counts to zero.",
           async () => {
             try {
+              showLoading();
               showToast('Resetting all votes...', 'info');
               const batch = db.batch();
               for (const position of ELECTION_POSITIONS) {
@@ -1650,6 +1734,8 @@
             } catch (error) {
               console.error("Error clearing votes:", error);
               showToast("Failed to reset votes", "error");
+            } finally {
+              hideLoading();
             }
           }
         );
@@ -1662,6 +1748,7 @@
       const pass = prompt("Enter password to download results:");
       if (pass === "1234") {
         try {
+          showLoading();
           showToast('Generating PDF report...', 'info');
           const doc = new jsPDF();
           doc.setFontSize(20);
@@ -1748,6 +1835,8 @@
         } catch (error) {
           console.error("Error generating PDF:", error);
           showToast("Failed to generate PDF report", "error");
+        } finally {
+          hideLoading();
         }
       } else {
         showToast("Incorrect password!", "error");
@@ -1760,6 +1849,7 @@
         timerInterval = null;
       }
       document.getElementById(from).classList.add("hidden");
+      document.querySelectorAll('.container[id^="voteFrame_"]').forEach(el => el.remove());
       document.getElementById(to).classList.remove("hidden");
       if (to === 'mainMenu') {
         current = 0;
